# universal_scraper

./: .gitignore  README.md  app.py  books_scraper.drawio  pyproject.toml  requirements.txt  run.py  scrape_to_database.py
db/: database.py
db_config/: books_table.sql  database_config.py
element/: element.py
locators/: fieldLocator.py  pageLocator.py
page/: page_scraper.py
requester(async + chromium)/: cookie_consent_kaloricke_tabulky.py  requester.py  search_for_ingredient_kaloricke_tabulky.py
utils/: logger.py
