[tool.poetry]
name = "universal-scraper"
version = "1.0"
description = "App for interactive universal scraping"
authors = ["jagi113 <jaroslavgirovsky@gmail.com>"]
readme = "README.md"
packages = [{include = "universal_scraper"}]

[tool.poetry.dependencies]
python = "3.11.5"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
bs4 = "^0.0.1"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
